add public bundle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,15 @@
     "rootDir": "./src",
     "target": "es6",
     "module": "es6",
-    "strict": true
-  }
+    "moduleResolution": "bundler",
+    "strict": true,
+    "allowJs": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "allowImportingTsExtensions": false
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
 
