--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "target": "es2022",
-    "module": "es2022",
+    "target": "ES2020",
+    "module": "amd",
+    "outFile": "dist/bundle.js",
     "strict": true
-  }
+  },
+  "include": ["src/**/*"]
 }
 
