--- a/leaderboard/package.json
+++ b/leaderboard/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "leaderboard",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
