--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 *.local
 
 leaderboard/node_modules
+leaderboard/.env
 
 # Editor directories and files
 .vscode/*
@@ -26,6 +27,7 @@ leaderboard/node_modules
 *.sw?
 
 .env
+
 
 # Draft
 draft
